[package]
name = "jitoliq"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0.79"
base64 = "0.22.1"
bs58 = "0.5.1"
lazy_static = "1.5.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.116"


